Fix z-index conflict with Yoast
https://i.gravitykit.com/i/vPaHhu

--- a/assets/css/dashboard-view-editor.scss
+++ b/assets/css/dashboard-view-editor.scss
@@ -1,3 +1,7 @@
 .ts-wrapper * {
   font-size: inherit;
 }
+
+.ts-wrapper {
+  z-index: 20; /** Show above the Yoast SEO tabbed interface, set to 12. */
+}
